# KernelDensityEstimation

./: CMakeLists.txt  KernelDensityEstimation  README.md
bench/: CMakeLists.txt  bench.cpp  multiVariateGaussian.cpp  powSpecSamples.cpp
cmake/: Findnanoflann.cmake
data/: CMakeLists.txt  genMultiVariateGaussian.cpp
demo/: CMakeLists.txt  demoBiVariateGauss.cpp  demoPowSpecSamples2d.cpp  demoPowSpecSamples2d.gp  plotDemoBiVariateGauss.gp
src/: AllNeighbours.hpp  DiagonalBandwidthMatrix.hpp  Gaussian.hpp  KernelDensityEstimation.hpp  NearestNeighboursKDTree.hpp  bw.hpp  kde.hpp  utils.hpp
test/: AllNeighbours.cpp  CMakeLists.txt  DiagonalBandwidthMatrix.cpp  Gaussian.cpp  KernelDensityEstimation.cpp  NearestNeighboursKDTree.cpp  testKDE.cpp
