cmake_minimum_required(VERSION 2.8)

project(testKDE)

#add_executable(testKDE testKDE.cpp)
add_executable(testGaussian Gaussian.cpp)
add_executable(testDiagonalBandwidthMatrix DiagonalBandwidthMatrix.cpp)
add_executable(testAllNeighbours AllNeighbours.cpp)
add_executable(testKernelDensityEstimation KernelDensityEstimation.cpp)
add_executable(testNearestNeighboursKDTree NearestNeighboursKDTree.cpp)

add_test(kernel_Gaussian testGaussian)
add_test(bandwidth_DiagonalBandwidthMatrix testDiagonalBandwidthMatrix)
add_test(neighbours_AllNeighbours testAllNeighbours)
add_test(kde_KernelDensityEstimation testKernelDensityEstimation)
add_test(neighbours_NearestNeighboursKDTree testNearestNeighboursKDTree)
